--- a/hao/index.html
+++ b/hao/index.html
@@ -532,8 +532,9 @@
                 <nav class="navbar-menu">
                     <ul class="nav-links">
                         <li><a href="#"><i class="fas fa-home"></i> 首页</a></li>
+                        <li><a href="#"><i class="fas fa-user"></i> 百宝库</a></li>
                         <li class="dropdown">
-                            <a href="#"><i class="fas fa-tools"></i> 工具</a>
+                            <a href="#"><i class="fas fa-tools"></i> 设计工具</a>
                             <div class="dropdown-content">
                                 <a href="#"><i class="fas fa-code"></i> 开发工具</a>
                                 <a href="#"><i class="fas fa-paint-brush"></i> 设计工具</a>
@@ -542,14 +543,13 @@
                                 <a href="#"><i class="fas fa-file-alt"></i> 文档工具</a>
                             </div>
                         </li>
-                        <li><a href="#"><i class="fas fa-bookmark"></i> 收藏</a></li>
-                        <li><a href="#"><i class="fas fa-user"></i> 我的</a></li>
+                        <li><a href="#"><i class="fas fa-bookmark"></i> 设计导航</a></li>
                     </ul>
                 </nav>
 
                 <div class="search-btn" id="searchBtn">
                     <i class="fas fa-search"></i>
-                    <span>快速搜索</span>
+                    <span>字造起点黑-Beta体验</span>
                 </div>
             </div>
 
@@ -568,10 +568,10 @@
     <div class="search-modal" id="searchModal">
         <div class="search-modal-content">
             <div class="search-modal-header">
-                <h3>快速搜索</h3>
+                <h3>字造起点黑-Beta体验</h3>
                 <button class="close-search" id="closeSearch">&times;</button>
             </div>
-            <iframe class="search-iframe" src="https://www.zitisheji.com" allowfullscreen></iframe>
+            <iframe class="search-iframe" src="https://www.zizao.top" allowfullscreen></iframe>
         </div>
     </div>
 
