--- a/hao/hao.html
+++ b/hao/hao.html
@@ -549,10 +549,11 @@
                         <input type="text" class="search-box" placeholder="输入关键词搜索，按Tab键快速切换搜索引擎...Ctrl/Cmd+D收藏本页面哦~" id="searchInput">
                     </div>
                     <div class="hot-links">
-                        <a href="https://www.example.com/inspiration" class="hot-link" target="_blank">灵感</a>
-                        <a href="https://www.example.com/font" class="hot-link" target="_blank">字体</a>
-                        <a href="https://www.example.com/ai" class="hot-link" target="_blank">AI工具</a>
-                        <a href="https://www.example.com/free-resources" class="hot-link" target="_blank">免费资源</a>
+                        <a href="https://www.dazi.co/index" class="hot-link" target="_blank">AskManyAI</a>
+                        <a href="https://www.pinterest.com/" class="hot-link" target="_blank">Pinterest</a>
+                        <a href="https://chat.deepseek.com/" class="hot-link" target="_blank">Deepseek</a>
+                        <a href="https://yuanbao.tencent.com/" class="hot-link" target="_blank">腾讯元宝</a>
+                        <a href="https://www.wenxiaobai.com" class="hot-link" target="_blank">问小白AI</a>
                     </div>
                 </div>
             </div>
