--- a/hao/index.html
+++ b/hao/index.html
@@ -532,9 +532,9 @@
                 <nav class="navbar-menu">
                     <ul class="nav-links">
                         <li><a href="#"><i class="fas fa-home"></i> 首页</a></li>
-                        <li><a href="#"><i class="fas fa-user"></i> 百宝库</a></li>
+                        <li><a href="#"><i class="fas fa-bookmark"></i> 字体</a></li>
                         <li class="dropdown">
-                            <a href="#"><i class="fas fa-tools"></i> 设计工具</a>
+                            <a href="#"><i class="fas fa-tools"></i> 工具</a>
                             <div class="dropdown-content">
                                 <a href="#"><i class="fas fa-code"></i> 开发工具</a>
                                 <a href="#"><i class="fas fa-paint-brush"></i> 设计工具</a>
@@ -543,7 +543,14 @@
                                 <a href="#"><i class="fas fa-file-alt"></i> 文档工具</a>
                             </div>
                         </li>
-                        <li><a href="#"><i class="fas fa-bookmark"></i> 设计导航</a></li>
+                        <li class="dropdown">
+                            <a href="#"><i class="fas fa-tools"></i> 神器</a>
+                            <div class="dropdown-content">
+                                <a href="#"><i class="fas fa-code"></i> 设计导航</a>
+                                <a href="#"><i class="fas fa-chart-line"></i> 深度测评</a>
+                            </div>
+                        </li>
+                        <li><a href="#"><i class="fas fa-user"></i> 服务</a></li>
                     </ul>
                 </nav>
 
