--- a/write/index.html
+++ b/write/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <!-- SEO 优化 -->
-    <title>字造 - 共赴十年之约</title>
+    <title>搜书法风格 - 字造ZIZAO</title>
     <meta name="description" content="字造产品展示，提供优质的字库产品和设计资源。了解更多关于字造的信息。">
     <meta name="keywords" content="字造, 字库, 字体设计, 设计资源, 你的关键词">
     <meta name="author" content="字造">
@@ -15,7 +15,7 @@
     <meta property="og:url" content="URL_TO_YOUR_PAGE">
     <meta property="og:type" content="website">
 
-    <link rel="icon" href="index/index.ico" type="image/x-icon">
+    <link rel="icon" href="index.ico" type="image/x-icon">
 
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500;700&family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -601,7 +601,7 @@
     <header class="navbar">
         <div class="navbar-container">
             <div class="navbar-brand">
-                <img src="index/logo.svg" alt="zizao.top Logo" class="logo-img">
+                <img src="logo.svg" alt="zizao.top Logo" class="logo-img">
             </div>
 
             <div class="nav-right">
@@ -637,7 +637,7 @@
     </header>
 
     <div class="content-container">
-        <iframe id="main-iframe" src="index/index.html" allowfullscreen></iframe>
+        <iframe id="main-iframe" src="write.html" allowfullscreen></iframe>
     </div>
 
     <div class="search-modal" id="searchModal">
@@ -652,17 +652,17 @@
 
     <!-- 右侧按钮栏 -->
     <div class="right-button-bar">
-        <a href="https://www.douyin.com/user/MS4wLjABAAAAHS3xXmx-djagMBtv5pfJpJ_awJuC5Du8SnXDC8AYPI4Wr4lQpJllFxZDUEOCpZ8k" class="right-button" style="background-image: url('index/Button/dy.webp');" target="_blank" title="打开抖音主页"></a>
-        <a href="https://www.xiaohongshu.com/user/profile/678f47130000000007000eaa?xsec_token=ABaqtmkT0lw0VyG8UiVO9Bc8BQmkF8zQ1S3FXVw-iEiN0%3D&xsec_source=pc_search" class="right-button" style="background-image: url('index/Button/xhs.webp');" target="_blank" title="打开小红书主页"></a>
-        <a href="https://www.zcool.com.cn/u/15462186" class="right-button" style="background-image: url('index/Button/zk.webp');" target="_blank" title="打开站酷主页"></a>
-        <a href="#" class="right-button" style="background-image: url('index/Button/wg.webp');" title="关注公众号" id="qrCodeButton1">
+        <a href="https://www.douyin.com/user/MS4wLjABAAAAHS3xXmx-djagMBtv5pfJpJ_awJuC5Du8SnXDC8AYPI4Wr4lQpJllFxZDUEOCpZ8k" class="right-button" style="background-image: url('Button/dy.webp');" target="_blank" title="打开抖音主页"></a>
+        <a href="https://www.xiaohongshu.com/user/profile/678f47130000000007000eaa?xsec_token=ABaqtmkT0lw0VyG8UiVO9Bc8BQmkF8zQ1S3FXVw-iEiN0%3D&xsec_source=pc_search" class="right-button" style="background-image: url('Button/xhs.webp');" target="_blank" title="打开小红书主页"></a>
+        <a href="https://www.zcool.com.cn/u/15462186" class="right-button" style="background-image: url('Button/zk.webp');" target="_blank" title="打开站酷主页"></a>
+        <a href="#" class="right-button" style="background-image: url('Button/wg.webp');" title="关注公众号" id="qrCodeButton1">
             <div class="qr-code-popup">
-                <img src="index/Button/iwg.webp" alt="Your QR Code">
+                <img src="Button/iwg.webp" alt="Your QR Code">
             </div>
         </a>
-        <a href="#" class="right-button" style="background-image: url('index/Button/wx.webp');" title="加客服微信" id="qrCodeButton2">
+        <a href="#" class="right-button" style="background-image: url('Button/wx.webp');" title="加客服微信" id="qrCodeButton2">
             <div class="qr-code-popup">
-                <img src="index/Button/iwx.webp" alt="Your QR Code">
+                <img src="Button/iwx.webp" alt="Your QR Code">
             </div>
         </a>
     </div>
