--- a/tool/tool/home/index.html
+++ b/tool/tool/home/index.html
@@ -40,7 +40,7 @@
         .app-container {
             display: flex;
             min-height: 100vh;
-            max-width: 1400px;
+            max-width: 1600px; /* 增加 app-container 的最大宽度 */
             margin: 0 auto;
             border-left: 1px solid var(--border-color);
             border-right: 1px solid var(--border-color);
@@ -274,7 +274,7 @@
         /* 卡片区域 */
         .cards-section {
             flex: 1;
-            padding: 30px 40px;
+            padding: 30px 60px; /* 增加 cards-section 的左右 padding */
             background-color: var(--bg-color);
         }
 
