--- a/tools/tool/home/index.html
+++ b/tools/tool/home/index.html
@@ -239,7 +239,7 @@
         <div class="logo" style="background-image: url('logo.svg')"></div>
         <h1>字造工具百宝库</h1>
         <p>一站式解决日常所需 | 酷站 · 工具 · 资源</p>
-        <a href="https://zizao.top/tool/#hao" class="btn">开始使用</a>
+        <a href="https://zizao.top/tools/#hao" class="btn">开始使用</a>
     </div>
 
     <script>
