--- a/index.html
+++ b/index.html
@@ -605,7 +605,7 @@
                 </div>
                 <h3>小红书主页</h3>
                 <p>设计师私藏的设计资源库、稀缺素材和最新设计软件全都有。</p>
-                <a href="https://zizao.top/tool/#bao" target="_blank" class="card-btn">
+                <a href="https://www.xiaohongshu.com/user/profile/678f47130000000007000eaa" target="_blank" class="card-btn">
                     浏览主页
                     <i class="fas fa-arrow-right"></i>
                 </a>
@@ -641,7 +641,7 @@
                 </div>
                 <h3>抖音</h3>
                 <p>浏览我的生活分享、好物推荐和实用攻略。发现更多精彩内容。</p>
-                <a href="https://www.xiaohongshu.com/user/profile/yourid" target="_blank" class="card-btn">
+                <a href="https://www.douyin.com/user/self?from_tab_name=main&showTab=like" target="_blank" class="card-btn">
                     浏览主页
                     <i class="fas fa-arrow-right"></i>
                 </a>
