--- a/index.html
+++ b/index.html
@@ -632,7 +632,7 @@
                 </div>
                 <h3>字造字库</h3>
                 <p>敬请期待</p>
-                <a href="https://www.douyin.com/user/self?from_tab_name=main&showTab=like" target="_blank" class="card-btn">
+                <a href="https://www.zizao.top/fonts" target="_blank" class="card-btn">
                     点击跳转
                     <i class="fas fa-arrow-right"></i>
                 </a>
