--- a/index.html
+++ b/index.html
@@ -631,7 +631,7 @@
                     <img src="index/fonts.webp" alt="字造字库">
                 </div>
                 <h3>字造字库</h3>
-                <p>敬请期待</p>
+                <p>敬请期待-敬请期待-敬请期待-敬请期待-敬请期待</p>
                 <a href="https://www.zizao.top/fonts" target="_blank" class="card-btn">
                     点击跳转
                     <i class="fas fa-arrow-right"></i>
