--- a/fonts/index.html
+++ b/fonts/index.html
@@ -361,6 +361,7 @@
                             <a href="#"><i class="fa-solid fa-grip"></i> <span class="menu-text">产品</span></a>
                             <div class="dropdown-content">
                                 <a href="#" data-iframe="https://zizao.top/fonts/product/ZzQidianSans" data-hash="ZzQidianSans">字造起点黑</a>
+                                <a href="#" data-iframe="https://zizao.top/fonts/product/Beta" data-hash="Beta">新字预告</a>
                             </div>
                         </li>
                         <li class="dropdown">
