--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         .logo img {
             margin-right: 0.8rem;
             width: auto;
-            height: 42px; /* Adjusted height to match button height */
+            height: 42px; /* 调整高度以匹配按钮高度 */
         }
 
         .header-actions {
@@ -259,7 +259,7 @@
         }
 
         .feature-item-title {
-            font-size: 1.4rem; /* Increased font size */
+            font-size: 1.4rem; /* 增加字体大小 */
             font-weight: 600;
             margin-bottom: 0.8rem;
             color: var(--text-color);
@@ -274,7 +274,7 @@
 
         .feature-item-desc {
             color: var(--text-light);
-            font-size: 0.9rem; /* Reduced font size */
+            font-size: 0.9rem; /* 减小字体大小 */
             line-height: 1.6;
         }
 
@@ -372,7 +372,7 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            background-color: var(--card-bg);
+            background-color: #FFFFFF;
             border-radius: 16px;
             padding: 2rem;
             width: 90%;
@@ -389,18 +389,6 @@
             display: block;
             opacity: 1;
             transform: translate(-50%, -50%) scale(1);
-        }
-
-        .popup-modal::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 4px;
-            background: linear-gradient(90deg, var(--primary-color), var(--secondary-color));
-            border-top-left-radius: 16px;
-            border-top-right-radius: 16px;
         }
 
         .popup-qrcode {
@@ -462,7 +450,7 @@
             display: flex;
             justify-content: center;
             gap: 1.5rem;
-            margin-bottom: 1rem; /* Reduced margin */
+            margin-bottom: 1rem;
         }
 
         .social-link {
@@ -539,9 +527,9 @@
             margin-top: 1rem;
         }
 
-        /* Added container for the button */
+        /* 添加按钮容器 */
         .footer-button-container {
-            margin-bottom: 1.5rem; /* Added margin */
+            margin-bottom: 1.5rem;
         }
 
         @keyframes fadeIn {
@@ -679,9 +667,9 @@
                 <img src="index/logo.svg" alt="logo">
             </div>
             <div class="header-actions">
-                <a href="https://www.zizao.top" class="design-collab-btn">
+                <a href="https://www.zizao.top" class="design-collab-btn" target="_blank" rel="noopener noreferrer">
                     设计合作
-                    <i class="fa-solid fa-comment"></i>
+                    <i class="fa-solid fa-right-to-bracket"></i>
                 </a>
             </div>
         </header>
@@ -738,7 +726,7 @@
 
                 <div class="feature-grid">
                     <div class="feature-item" data-href="#">
-                        <h3 class="feature-item-title"><i class="fa-solid fa-thumbs-up"></i>即将上线-免费商用双轴可变字体-字造起点黑</h3>
+                        <h3 class="feature-item-title"><i class="fa-solid fa-fire"></i>即将上线-免费商用双轴可变字体-字造起点黑</h3>
                         <p class="feature-item-desc">结合中国古代隶书的线条美和骨感美，融合现代屏显黑体再加上更具视觉张力的字形结构，打造的独属字造的免费商用“黑体”</p>
                     </div>
                 </div>
@@ -773,10 +761,10 @@
                 </a>
             </div>
             <div class="footer-button-container">
-                <button class="btn btn-small" id="showWechatModal2">添加微信好友</button>
+                <button class="btn btn-small" id="showWechatModal2">添加微信好友<i class="fa-solid fa-comment"></i></button>
             </div>
             <p>© <span id="currentYear"></span> 字造ZIZAO.TOP</p>
-            <p>通过以上方式了解我们，获取最新内容更新</p>
+            <p>推荐通过以上方式了解我们，且可获取最新内容更新</p>
 
         </footer>
     </div>
@@ -812,7 +800,7 @@
                 }
             });
 
-            // Close modal when clicking outside
+            // 点击模态框外部关闭模态框
             document.addEventListener('click', function(e) {
                 if (!e.target.closest('.popup-modal') && !e.target.closest('#footerWechat') && !e.target.closest('#showWechatModal2')) {
                     document.querySelectorAll('.popup-modal').forEach(modal => {
