--- a/tools/index.html
+++ b/tools/index.html
@@ -350,7 +350,7 @@
                     <span class="menu-item-badge">推荐</span>
                 </li>
                 <li class="menu-item" data-tool="bao" data-title="资源宝库">
-                    <i class="fas fa-file-archive"></i>
+                    <i class="fas fa-book"></i>
                     <span>资源宝库</span>
                 </li>
                 <li class="menu-item" data-tool="god" data-title="神器推荐">
@@ -405,7 +405,7 @@
         </div>
 
         <div class="tool-container" id="bao">
-            <iframe src="tool/bao" title="资源宝库"></iframe>
+            <iframe src="https://zizaotop.feishu.cn/share/base/query/shrcn0Ka5zIo6q8TCHmstW2OS6c" title="资源宝库"></iframe>
         </div>
 
         <div class="tool-container" id="god">
