--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <style>
         :root {
             --primary-color: #FF8C19;
-            --primary-light: rgba(255, 140, 25, 0.1);
+            --primary-light: rgba(255, 140, 25, 0.05); /* 调整为更浅的透明度 */
             --secondary-color: #FF5E5B;
             --accent-color: #00D1B2;
             --text-color: #2D2D2D;
@@ -43,6 +43,10 @@
 
         body {
             background-color: var(--bg-color);
+            /* 新增的柔和背景纹理 */
+            background-image: 
+                radial-gradient(circle at 50% 50%, var(--primary-light) 0%, transparent 70%);
+            background-size: 100% 100%;
             color: var(--text-color);
             min-height: 100vh;
             overflow-x: hidden;
@@ -77,7 +81,7 @@
         .logo img {
             margin-right: 0.8rem;
             width: auto;
-            height: 42px; /* 调整高度以匹配按钮高度 */
+            height: 42px;
         }
 
         .header-actions {
@@ -229,7 +233,7 @@
             font-weight: 700;
             color: var(--text-color);
             margin-bottom: 0.5rem;
-}
+        }
 
         .feature-description {
             color: var(--text-light);
@@ -259,7 +263,7 @@
         }
 
         .feature-item-title {
-            font-size: 1.4rem; /* 增加字体大小 */
+            font-size: 1.4rem;
             font-weight: 600;
             margin-bottom: 0.8rem;
             color: var(--text-color);
@@ -274,7 +278,7 @@
 
         .feature-item-desc {
             color: var(--text-light);
-            font-size: 0.9rem; /* 减小字体大小 */
+            font-size: 0.9rem;
             line-height: 1.6;
         }
 
@@ -527,7 +531,6 @@
             margin-top: 1rem;
         }
 
-        /* 添加按钮容器 */
         .footer-button-container {
             margin-bottom: 1.5rem;
         }
@@ -725,9 +728,9 @@
                 </div>
 
                 <div class="feature-grid">
-                    <div class="feature-item" data-href="#">
+                    <div class="feature-item" data-href="https://www.zizao.top/fonts/#ZzQidiansans">
                         <h3 class="feature-item-title"><i class="fa-solid fa-fire"></i>即将上线-免费商用双轴可变字体-字造起点黑</h3>
-                        <p class="feature-item-desc">结合中国古代隶书的线条美和骨感美，融合现代屏显黑体再加上更具视觉张力的字形结构，打造的独属字造的免费商用“黑体”</p>
+                        <p class="feature-item-desc">结合中国古代隶书的线条美和骨感美，融合现代屏显黑体再加上更具视觉张力的字形结构，打造的独属字造的免费商用"黑体"</p>
                     </div>
                 </div>
             </div>
@@ -757,7 +760,7 @@
                     <img src="index/m/you.webp" alt="YouTube主页" width="24" height="24">
                 </a>
                 <a href="https://www.zhihu.com/people/31-16-90-61-82" target="_blank" class="social-link">
-                    <img src="index/m/z.webp" alt="知乎主页" width="24, height=24">
+                    <img src="index/m/z.webp" alt="知乎主页" width="24" height="24">
                 </a>
             </div>
             <div class="footer-button-container">
@@ -765,7 +768,6 @@
             </div>
             <p>© <span id="currentYear"></span> 字造ZIZAO.TOP</p>
             <p>推荐通过以上方式了解我们，且可获取最新内容更新</p>
-
         </footer>
     </div>
 
@@ -800,7 +802,6 @@
                 }
             });
 
-            // 点击模态框外部关闭模态框
             document.addEventListener('click', function(e) {
                 if (!e.target.closest('.popup-modal') && !e.target.closest('#footerWechat') && !e.target.closest('#showWechatModal2')) {
                     document.querySelectorAll('.popup-modal').forEach(modal => {
