--- a/tools/index.html
+++ b/tools/index.html
@@ -340,7 +340,7 @@
 
         <div class="sidebar-main">
             <ul class="sidebar-menu">
-                <li class="menu-item" data-tool="home" data-title="字造主页">
+                <li class="menu-item" data-tool="home" data-title="字造主页" data-url="https://www.zizao.top">
                     <i class="fas fa-home"></i>
                     <span>字造主页</span>
                 </li>
@@ -353,25 +353,17 @@
                     <i class="fas fa-book"></i>
                     <span>资源宝库</span>
                 </li>
-                <li class="menu-item" data-tool="god" data-title="神器推荐">
-                    <i class="fa-solid fa-thumbs-up"></i>
-                    <span>神器推荐</span>
-                </li>
                 <li class="menu-item" data-tool="write" data-title="搜书法风格">
                     <i class="fa-solid fa-signature"></i>
                     <span>搜书法风格</span>
                 </li>
-                <li class="menu-item" data-tool="freefonts" data-title="免费字体合集">
+                <li class="menu-item" data-tool="txttools" data-title="文本工具">
                     <i class="fa-solid fa-font"></i>
-                    <span>免费字体合集</span>
+                    <span>文本工具</span>
                 </li>
                 <li class="menu-item" data-tool="like" data-title="形近字查询">
                     <i class="fa-solid fa-timeline"></i>
                     <span>形近字查询</span>
-                </li>
-                <li class="menu-item" data-tool="fonts" data-title="字造字库" data-url="https://www.zizao.top/fonts">
-                    <i class="fa-solid fa-font"></i>
-                    <span>字造字库</span>
                 </li>
             </ul>
 
@@ -404,10 +396,6 @@
     <!-- 主内容区 -->
     <div class="main-content">
 
-        <div class="tool-container active" id="home">
-            <iframe src="tool/home" title="字造主页"></iframe>
-        </div>
-
         <div class="tool-container active" id="hao">
             <iframe src="tool/hao" title="设计导航"></iframe>
         </div>
@@ -416,23 +404,16 @@
             <iframe src="https://zizaotop.feishu.cn/share/base/query/shrcn0Ka5zIo6q8TCHmstW2OS6c" title="资源宝库"></iframe>
         </div>
 
-        <div class="tool-container" id="god">
-            <iframe src="tool/god" title="神器推荐"></iframe>
-        </div>
-
         <div class="tool-container" id="write">
             <iframe src="tool/write" title="搜书法风格"></iframe>
         </div>
 
-        <div class="tool-container" id="freefonts">
-            <iframe src="tool/freefonts" title="免费字体合集"></iframe>
+        <div class="tool-container" id="txttools">
+            <iframe src="tool/txttools" title="文本工具"></iframe>
         </div>
 
         <div class="tool-container" id="like">
             <iframe src="tool/like" title="形近字查询"></iframe>
-        </div>
-        <div class="tool-container" id="fonts">
-            <iframe src="tool/fonts" title="字造字库"></iframe>
         </div>
 
 
