--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <link rel="icon" href="index.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.0/css/all.min.css">
     <style>
-        /* CSS 变量定义 */
         :root {
             --sidebar-bg: #2d353c;
             --sidebar-width: 280px;
@@ -30,7 +29,6 @@
             --border-radius: 6px;
         }
 
-        /* 全局样式重置 */
         * {
             margin: 0;
             padding: 0;
@@ -46,7 +44,6 @@
             color: #333;
         }
 
-        /* 侧边栏样式 */
         .sidebar {
             width: var(--sidebar-width);
             background: var(--sidebar-bg);
@@ -59,7 +56,7 @@
             z-index: 100;
             display: flex;
             flex-direction: column;
-            flex-shrink: 0; /* 防止侧边栏被压缩 */
+            flex-shrink: 0;
         }
 
         .sidebar.collapsed {
@@ -70,16 +67,15 @@
         .sidebar.collapsed .menu-item-badge,
         .sidebar.collapsed .footer-item span,
         .sidebar.collapsed .collapse-btn span {
-            display: none; /* 折叠时隐藏文字 */
+            display: none;
         }
 
-        /* 侧边栏头部 */
         .sidebar-header {
             padding: 18px 20px;
             display: flex;
             align-items: center;
             border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-            justify-content: center; /* Logo居中 */
+            justify-content: center;
         }
 
         .logo-img {
@@ -88,10 +84,9 @@
             object-fit: contain;
         }
 
-        /* 主菜单区域 */
         .sidebar-main {
-            flex: 1; /* 占据剩余空间 */
-            overflow-y: auto; /* 菜单内容过多时滚动 */
+            flex: 1;
+            overflow-y: auto;
             padding: 10px 0;
             display: flex;
             flex-direction: column;
@@ -99,10 +94,9 @@
 
         .sidebar-menu {
             list-style: none;
-            flex: 1; /* 占据剩余空间 */
+            flex: 1;
         }
 
-        /* 滚动条样式 */
         .sidebar-menu::-webkit-scrollbar {
             width: 6px;
         }
@@ -120,12 +114,12 @@
             transition: var(--transition);
             display: flex;
             align-items: center;
-            white-space: nowrap; /* 防止文字换行 */
+            white-space: nowrap;
             position: relative;
         }
 
         .sidebar.collapsed .menu-item {
-            justify-content: center; /* 折叠时图标居中 */
+            justify-content: center;
             padding: 15px 0;
         }
 
@@ -135,11 +129,11 @@
 
         .menu-item.active {
             background: var(--active-color);
-            color: white; /* 选中项文字颜色 */
+            color: white;
         }
 
         .menu-item.active i {
-            color: var(--primary-color); /* 选中项图标颜色 */
+            color: var(--primary-color);
         }
 
         .menu-item i {
@@ -152,7 +146,7 @@
         }
 
         .sidebar.collapsed .menu-item i {
-            margin-right: 0; /* 折叠时图标无外边距 */
+            margin-right: 0;
         }
 
         .menu-item span {
@@ -161,7 +155,7 @@
         }
 
         .menu-item-badge {
-            margin-left: auto; /* 推到右侧 */
+            margin-left: auto;
             background: var(--primary-color);
             color: white;
             font-size: 0.6rem;
@@ -170,7 +164,6 @@
             line-height: 1.2;
         }
 
-        /* 折叠按钮 */
         .collapse-btn-container {
             padding: 15px 20px;
             border-top: 1px solid rgba(255, 255, 255, 0.1);
@@ -207,13 +200,12 @@
 
         .sidebar.collapsed .collapse-btn i {
             margin-right: 0;
-            transform: rotate(180deg); /* 折叠时箭头旋转 */
+            transform: rotate(180deg);
         }
 
-        /* 底部菜单 */
         .sidebar-footer {
             padding: 10px 0;
-            border-top: 1px solid rgba(255, 255, 255, 0.1); /* 底部菜单顶部边框 */
+            border-top: 1px solid rgba(255, 255, 255, 0.1);
         }
 
         .footer-item {
@@ -249,9 +241,8 @@
             margin-right: 0;
         }
 
-        /* 主内容区 */
         .main-content {
-            flex: 1; /* 占据剩余所有空间 */
+            flex: 1;
             height: 100vh;
             overflow: hidden;
             transition: margin-left 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
@@ -260,13 +251,13 @@
         .tool-container {
             width: 100%;
             height: 100%;
-            display: none; /* 默认隐藏 */
+            display: none;
             background: white;
         }
 
         .tool-container.active {
-            display: block; /* 激活时显示 */
-            animation: fadeIn 0.4s ease-out; /* 淡入动画 */
+            display: block;
+            animation: fadeIn 0.4s ease-out;
         }
 
         iframe {
@@ -281,25 +272,24 @@
             to { opacity: 1; }
         }
 
-        /* 响应式设计 */
         @media (max-width: 992px) {
             .sidebar {
-                position: fixed; /* 移动端固定定位 */
+                position: fixed;
                 left: 0;
                 top: 0;
-                transform: translateX(-100%); /* 默认隐藏在左侧 */
+                transform: translateX(-100%);
             }
 
             .sidebar:not(.collapsed) {
-                transform: translateX(0); /* 展开时显示 */
+                transform: translateX(0);
             }
 
             .main-content {
-                margin-left: 0 !important; /* 移动端无左侧边距 */
+                margin-left: 0 !important;
             }
 
             .mobile-toggle-btn {
-                display: flex; /* 移动端显示 */
+                display: flex;
                 position: fixed;
                 left: 10px;
                 top: 10px;
@@ -316,14 +306,12 @@
                 transition: opacity 0.3s ease;
             }
 
-            /* 侧边栏展开时隐藏移动端切换按钮 */
             .sidebar:not(.collapsed) ~ .mobile-toggle-btn {
                 opacity: 0;
                 pointer-events: none;
             }
         }
 
-        /* 遮罩层样式 */
         #sidebar-overlay {
             position: fixed;
             top: 0;
@@ -334,17 +322,16 @@
             z-index: 99;
             opacity: 0;
             transition: opacity 0.3s ease;
-            pointer-events: none; /* 默认不响应事件 */
+            pointer-events: none;
         }
 
         #sidebar-overlay.show {
             opacity: 1;
-            pointer-events: auto; /* 显示时响应事件 */
+            pointer-events: auto;
         }
     </style>
 </head>
 <body>
-    <!-- 侧边栏 -->
     <div class="sidebar collapsed">
         <div class="sidebar-header">
             <div class="logo">
@@ -371,17 +358,8 @@
                     <i class="fa-solid fa-toolbox"></i>
                     <span>字造工具箱</span>
                 </li>
-                <li class="menu-item" data-tool="good" data-title="神器推荐" data-url="good/index.html">
-                    <i class="fa-solid fa-thumbs-up"></i>
-                    <span>神器推荐</span>
-                </li>
-                <li class="menu-item" data-tool="freefonts" data-title="免费商用字体" data-url="freefonts/index.html">
-                    <i class="fa-solid fa-font-awesome"></i>
-                    <span>免费商用字体</span>
-                </li>
             </ul>
 
-            <!-- 折叠按钮 -->
             <div class="collapse-btn-container">
                 <button class="collapse-btn" id="toggleSidebar">
                     <i class="fas fa-chevron-left"></i>
@@ -390,7 +368,6 @@
             </div>
         </div>
 
-        <!-- 底部菜单 -->
         <div class="sidebar-footer">
             <div class="footer-item" data-tool="about" data-title="关于我们" data-url="https://www.zizao.top/about.html">
                 <i class="fas fa-info-circle"></i>
@@ -407,9 +384,7 @@
         </div>
     </div>
 
-    <!-- 主内容区 -->
     <div class="main-content">
-        <!-- 所有工具的 iframe 容器 -->
         <div class="tool-container active" id="home">
             <iframe src="home/index.html" title="字造专注分享字体领域优质内容"></iframe>
         </div>
@@ -421,12 +396,6 @@
         </div>
         <div class="tool-container" id="tools">
             <iframe src="tools/index.html" title="字造工具箱"></iframe>
-        </div>
-        <div class="tool-container" id="good">
-            <iframe src="good/index.html" title="神器推荐"></iframe>
-        </div>
-        <div class="tool-container" id="freefonts">
-            <iframe src="freefonts/index.html" title="免费商用字体"></iframe>
         </div>
 
         <div class="tool-container" id="about">
@@ -440,12 +409,10 @@
         </div>
     </div>
 
-    <!-- 移动端侧边栏切换按钮 -->
     <button class="mobile-toggle-btn" id="mobileSidebarToggle" style="display: none;">
         <i class="fas fa-bars"></i>
     </button>
 
-    <!-- 移动端侧边栏遮罩层 -->
     <div id="sidebar-overlay"></div>
 
     <script>
@@ -455,10 +422,9 @@
             const mobileToggleBtn = document.getElementById('mobileSidebarToggle');
             const sidebar = document.querySelector('.sidebar');
             const sidebarOverlay = document.getElementById('sidebar-overlay');
-            let activeTool = 'home'; // 默认激活 'home' 工具
-            let isMobile = window.innerWidth <= 992; // 判断是否是移动端
+            let activeTool = 'home';
+            let isMobile = window.innerWidth <= 992;
 
-            // 更新浏览器URL和页面标题
             function updateBrowserURL(toolId, toolTitle) {
                 const state = { tool: toolId, title: toolTitle };
                 const url = `#${toolId}`;
@@ -466,48 +432,39 @@
                 document.title = `${toolTitle} - 字造ZIZAO`;
             }
 
-            // 切换工具函数
             function switchTool(toolId, toolTitle, toolUrl) {
-                // 如果是当前已激活的工具，且处于移动端未折叠状态，则折叠侧边栏
                 if (toolId === activeTool && isMobile && !sidebar.classList.contains('collapsed')) {
                     toggleSidebar();
                     return;
                 }
 
-                // 移除所有菜单项和工具容器的激活状态
                 document.querySelectorAll('.menu-item, .footer-item').forEach(i => i.classList.remove('active'));
                 document.querySelectorAll('.tool-container').forEach(tool => tool.classList.remove('active'));
 
-                // 激活当前点击的菜单项
                 const menuItem = document.querySelector(`[data-tool="${toolId}"]`);
                 if (menuItem) menuItem.classList.add('active');
 
-                // 激活对应的工具容器
                 const toolContainer = document.getElementById(toolId);
                 if (toolContainer) {
                     toolContainer.classList.add('active');
-                    activeTool = toolId; // 更新当前激活的工具ID
+                    activeTool = toolId;
 
                     const iframe = toolContainer.querySelector('iframe');
-                    // 如果iframe的src与目标url不同，或者src为空，则更新iframe的src并显示加载动画
                     if (iframe && (iframe.src !== toolUrl || iframe.src === '')) {
-                        iframe.style.opacity = 0; // 隐藏iframe，等待加载完成
+                        iframe.style.opacity = 0;
                         iframe.src = toolUrl;
                     }
 
-                    updateBrowserURL(toolId, toolTitle); // 更新URL和标题
+                    updateBrowserURL(toolId, toolTitle);
 
-                    // 如果是移动端且侧边栏未折叠，则折叠侧边栏
                     if (isMobile && !sidebar.classList.contains('collapsed')) {
                         toggleSidebar();
                     }
                 }
             }
 
-            // 从URL hash初始化工具
             function initToolFromURL() {
                 const hash = window.location.hash.substring(1);
-                // 优先从 hash 中获取工具ID
                 if (hash) {
                     const menuItem = document.querySelector(`[data-tool="${hash}"]`);
                     if (menuItem) {
@@ -518,7 +475,6 @@
                         return;
                     }
                 }
-                // 如果hash不存在或无效，默认打开 'home' 页面
                 const defaultMenuItem = document.querySelector('[data-tool="home"]');
                 if (defaultMenuItem) {
                     const toolId = defaultMenuItem.getAttribute('data-tool');
@@ -528,25 +484,23 @@
                 }
             }
 
-            // 侧边栏折叠/展开函数
             function toggleSidebar() {
                 const wasCollapsed = sidebar.classList.contains('collapsed');
                 sidebar.classList.toggle('collapsed');
                 
                 if (isMobile) {
-                    if (!wasCollapsed) { // 如果侧边栏从展开变为折叠
-                        sidebarOverlay.classList.remove('show'); // 隐藏遮罩层
+                    if (!wasCollapsed) {
+                        sidebarOverlay.classList.remove('show');
                         mobileToggleBtn.style.opacity = '1';
-                        mobileToggleBtn.style.pointerEvents = 'auto'; // 允许点击移动端切换按钮
-                    } else { // 如果侧边栏从折叠变为展开
-                        sidebarOverlay.classList.add('show'); // 显示遮罩层
+                        mobileToggleBtn.style.pointerEvents = 'auto';
+                    } else {
+                        sidebarOverlay.classList.add('show');
                         mobileToggleBtn.style.opacity = '0';
-                        mobileToggleBtn.style.pointerEvents = 'none'; // 禁用移动端切换按钮
+                        mobileToggleBtn.style.pointerEvents = 'none';
                     }
                 }
             }
 
-            // 给所有菜单项添加点击事件
             menuItems.forEach(item => {
                 item.addEventListener('click', function() {
                     const toolId = this.getAttribute('data-tool');
@@ -556,25 +510,21 @@
                 });
             });
 
-            // 折叠按钮点击事件
             toggleBtn.addEventListener('click', function(e) {
-                e.stopPropagation(); // 阻止事件冒泡
+                e.stopPropagation();
                 toggleSidebar();
             });
 
-            // 移动端侧边栏切换按钮点击事件
             mobileToggleBtn.addEventListener('click', function() {
                 toggleSidebar();
             });
 
-            // 遮罩层点击事件（仅在移动端有效，用于关闭侧边栏）
             sidebarOverlay.addEventListener('click', function() {
                 if (isMobile && !sidebar.classList.contains('collapsed')) {
                     toggleSidebar();
                 }
             });
 
-            // 监听浏览器历史记录变化（前进/后退按钮）
             window.addEventListener('popstate', function(event) {
                 if (event.state && event.state.tool) {
                     const menuItem = document.querySelector(`[data-tool="${event.state.tool}"]`);
@@ -585,45 +535,39 @@
                         switchTool(toolId, toolTitle, toolUrl);
                     }
                 } else {
-                    // 如果历史状态为空，重新根据URL初始化
                     initToolFromURL();
                 }
             });
 
-            // 处理响应式布局
             function handleResponsive() {
                 const newIsMobile = window.innerWidth <= 992;
-                if (newIsMobile !== isMobile) { // 只有在移动端状态改变时才执行
+                if (newIsMobile !== isMobile) {
                     isMobile = newIsMobile;
                     if (isMobile) {
-                        mobileToggleBtn.style.display = 'flex'; // 移动端显示切换按钮
-                        sidebar.classList.add('collapsed'); // 移动端默认折叠
+                        mobileToggleBtn.style.display = 'flex';
+                        sidebar.classList.add('collapsed');
                         mobileToggleBtn.style.opacity = '1';
                         mobileToggleBtn.style.pointerEvents = 'auto';
-                        sidebarOverlay.classList.remove('show'); // 确保遮罩层关闭
+                        sidebarOverlay.classList.remove('show');
                     } else {
-                        mobileToggleBtn.style.display = 'none'; // 非移动端隐藏切换按钮
-                        sidebar.classList.remove('collapsed'); // 非移动端默认展开
-                        sidebarOverlay.classList.remove('show'); // 确保遮罩层关闭
+                        mobileToggleBtn.style.display = 'none';
+                        sidebar.classList.remove('collapsed');
+                        sidebarOverlay.classList.remove('show');
                     }
                 }
             }
 
-            // 监听窗口大小变化
             window.addEventListener('resize', handleResponsive);
-            // 页面加载时执行一次，设置初始状态
             handleResponsive();
 
-            // iframe加载完成时显示
             document.querySelectorAll('iframe').forEach(iframe => {
                 iframe.addEventListener('load', function() {
                     this.style.opacity = 1;
                 });
-                iframe.style.opacity = 0; // 初始隐藏
-                iframe.style.transition = 'opacity 0.3s ease'; // 添加过渡效果
+                iframe.style.opacity = 0;
+                iframe.style.transition = 'opacity 0.3s ease';
             });
 
-            // 页面加载时根据URL或默认值初始化工具
             initToolFromURL();
         });
     </script>
