--- a/index.html
+++ b/index.html
@@ -565,11 +565,11 @@
                 <span>工具箱</span>
                 <i class="fas fa-chevron-down submenu-icon"></i>
                 <ul class="submenu">
-                    <li role="menuitem" tabindex="0" data-section="quzhong" data-type="iframe"><a class="submenu-item" href="#">字符去重</a></li>
-                    <li role="menuitem" tabindex="0" data-section="duibi" data-type="iframe"><a class="submenu-item" href="#">文本对比</a></li>
-                    <li role="menuitem" tabindex="0" data-section="pinyin" data-type="iframe"><a class="submenu-item" href="#">汉字拼音转换</a></li>
-                    <li role="menuitem" tabindex="0" data-section="xingjinzi" data-type="iframe"><a class="submenu-item" href="#">形近字查询</a></li>
-                    <li role="menuitem" tabindex="0" data-section="shufafengge" data-type="iframe"><a class="submenu-item" href="#">书法风格</a></li>
+                    <li role="menuitem" tabindex="0" data-section="quzhong" data-type="iframe"><a class="submenu-item" href="#">🟆 字符去重</a></li>
+                    <li role="menuitem" tabindex="0" data-section="duibi" data-type="iframe"><a class="submenu-item" href="#">🟆 文本对比</a></li>
+                    <li role="menuitem" tabindex="0" data-section="pinyin" data-type="iframe"><a class="submenu-item" href="#">🟆 汉字拼音转换</a></li>
+                    <li role="menuitem" tabindex="0" data-section="xingjinzi" data-type="iframe"><a class="submenu-item" href="#">🟆 形近字查询</a></li>
+                    <li role="menuitem" tabindex="0" data-section="shufafengge" data-type="iframe"><a class="submenu-item" href="#">🟆 书法风格</a></li>
                 </ul>
             </li>
 
